
ChangeLog
 [ + added, - removed, * changed ]
 +`04Dec2012 Added libz to dependencies when generating the shared libraries
 * 13Nov2012 Added checks for the C++ compiler only when it is required by 
   other functionalities like Dyninst or MRNet. Updated documentation.
 + 03Nov2012 Extrae version 2.3 in SVN
 * 24Oct2012 Sampling support for pthreads/openmp -> change type from default
   to virtual or prof.
 + 23Oct2012 Added support for binary rewriting using DynInst
 * 22Oct2012 DynInst compilation changed and broke into different components.
   Now sports pcontrol, stackwalk, dynelf/dwarf and symlite. 
 * 18Oct2012 Fixes for DynInst launch
             CUDA applications instrumented with DynInst now instruments
						 routines that call kernels.
 * 17Oct2012 Added Intel OpenMP runtime instrumentation when using Dyninst.
   Also, some minor enhacenements done when using DynInst.
 * 16Oct2012 Do not use -lrt if the system automatically adds clock_gettime
 * 11Oct2012 Improved support for Intel MIC KNC/KNF, now with support for
   Intel MPI 
 * 10Oct2012 Changed --enable-cuda for --with-cuda=DIR in the configure script
 + 09Oct2012 Improved support for BG/Q systems. Improved example for this
   architecture using libxml2 and binutils.
 + 04Oct2012 Added void Extrae_define_event_type (extrae_type_t type, char
 *type_description, unsigned nvalues, extrae_value_t *values, char
 **values_description); into the API
 + 04Oct2012 Added void Extrae_register_function_address (void *ptr, char
 *funcname, char *modname, unsigned line); into the API
 + 04Oct2012 Added additional checks for Extrae_register_function_address call
 + 01Oct2012 Added two additional checks tests/functional/dump-events and
   tests/functional/auto-init-fini. The former checks the basic API to emit
   events whereas the second checks for the instrumentation auto
   initialization and finalization.
 * 01Oct2012 Extrae API calls now honor extre_type_t / extrae_value_t instead